--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,12 @@ db.sqlite3
 # Documentation builds
 docs/_build/
 site/
+
+# Dossiers de développement et debug (ne pas versionner)
+debug/
+tests/
+
+# Instructions et fichiers de développement privés
+copilot-agent-instructions.md
+*.instructions.md
+*-instructions.md
